:bug: Sync z-index

--- a/@navikt/core/css/darkside/table.darkside.css
+++ b/@navikt/core/css/darkside/table.darkside.css
@@ -15,7 +15,7 @@
   .aksel-table--sticky-header & {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 10;
     background-color: var(--ax-bg-default);
     box-sizing: border-box;
   }
